# WorksheetAI

./: .gitignore  README.md  config_test.yaml  pyproject.toml  worksheet_config_150225_163029.json  worksheet_config_150225_163617.json  worksheet_config_150225_173536.json  worksheet_config_150225_180157.json  worksheet_config_150225_211937.json  worksheet_config_170225_204143.json  worksheet_config_170225_204807.json  worksheet_config_170225_205719.json  worksheet_config_170225_210734.json  worksheet_config_170225_212135.json  worksheet_config_220225_170651.json  worksheet_config_220225_172926.json  worksheet_output_150225_1721.ipynb  worksheet_output_150225_173536.ipynb  worksheet_output_150225_180157.ipynb  worksheet_output_150225_211937.ipynb  worksheet_output_170225_204807.ipynb  worksheet_output_170225_210734.ipynb  worksheet_output_170225_212135.ipynb  worksheet_output_220225_170651.ipynb  worksheet_output_220225_172926.ipynb
app/worksheetai/: package.json
src/app/worksheetai/: package-lock.json
src/app/worksheetai/app/view/: topicDashboard.tsx
src/worksheetai/: __init__.py  ai.py  cli.py  models.py
src/worksheetai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/worksheetai/api/: flask_api.py
src/worksheetai/cli/: __init__.py  cli.py
src/worksheetai/config/questions/: python.yaml  type.yaml
src/worksheetai/config/subjects/: coding.yaml
src/worksheetai/models/: __init__.py  file_models.py  models.py
src/worksheetai/services/: __init__.py  ai.py
src/worksheetai/utils/: __init__.py  helpers.py
worksheetai/: ai.py  converters.py  main.py  models.py
worksheetai/subjects/: coding.yaml
